# s3-proxy

./: Cargo.toml  README.md  docker-compose.yaml  run.sh  rustfmt.toml
src/: api.rs  axum_ext.rs  main.rs  signature.rs  templates.rs
templates/: list_buckets.xml  list_objects.xml
tests/: s3_proxy.rs
