[package]
name = "s3-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["http2", "multipart"] }
axum-route-error = "5.0.1"
config = { version = "0.14.0", default-features = false }
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1", "serde"] }
opendal = "0.44.2"
quick-xml = { version = "0.31.0", features = ["serialize", "async-tokio"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
