[package]
name = "s3-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.77"
aws-credential-types = "1.1.4"
aws-sigv4 = { version = "1.1.4", features = ["sign-http"] }
aws-smithy-runtime-api = "1.1.4"
axum = { version = "0.7.4", features = ["http2", "multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-route-error = "5.0.1"
config = { version = "0.14.0", default-features = false }
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1", "serde"] }
headers = "0.4.0"
opendal = {version="0.45.0", features=[]}
quick-xml = { version = "0.31.0", features = ["serialize", "async-tokio"] }
serde = { version = "1.0.196", features = ["derive"] }
time = "0.3.32"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0.13"
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.14.0"
